fixed spacing on pg3 in new query

--- a/style.css
+++ b/style.css
@@ -309,7 +309,7 @@
     }
 }
 
-@media screen and (-webkit-min-device-pixel-ratio: 1.25) {
+@media screen and (-webkit-min-device-pixel-ratio: 1.5) {
     /*Fixes white space in margin*/
     html, body {
         min-height: 100%;
@@ -373,7 +373,7 @@
         padding-top: 5%;
         padding-left: 50%;
         font-family: sans-serif;
-        font-size: 5px;
+        font-size: 25px;
         font-weight: bold;
         display: block;
         text-align: left;
@@ -544,8 +544,8 @@
         height: 37%;
         /*right: 10%;*/
         position: absolute;
-        margin: 2% 0 0 45%;
-        padding: 3% 3% 8% 3%;
+        margin: 2% 0 0 48%;
+        padding: 3% 3% 25% 3%;
         border-width: 5px;
         font-family: sans-serif;
         font-size: 22px;
@@ -576,7 +576,7 @@
         width: 100%;
         line-height: 1.3;
         display: inline-block;
-        font-size: 30px;
+        font-size: 28px;
         font-family: 'Source Sans Pro', sans-serif;
     }
 
